tests/snapshots/statements__deny_keyword_novalue_as_ident_name.snap
---
source: tests/statements.rs
expression: stderr

---
error: Expected identifier, found keyword `novalue` )
      |
    1 | please initialize variable novalue as Integer with the value of 10
      |                            ^^^^^^^
      |

It's not a valid identifier, identifiers consist of letters, _, $ and maybe some numbers in between. For more info, search for `unicode xid` on the internet.
You could use the identifier `x`.

